website/api_versioned_docs/version-1.2/blockchain-integration/contracts/verifier.md
# Verifier Contracts

To utilize the results generated by a [zkVM][term-zkvm] program in your on-chain application, it's essential to [verify][term-verify] the [receipt][term-receipt] on-chain.

You can verify a RISC Zero [Groth16Receipt] using a `verify()` call to an [IRiscZeroVerifier][IRiscZeroVerifier] contract.

## Using a Verifier

Use verifier contract in your application by calling the `verify` method with the expected [journal][term-journal] and other fields of the [receipt][term-receipt].

Below is an example from the [EvenNumber.sol][EvenNumber.sol] contract in the [Foundry Template][foundry-template]:

```solidity
contract EvenNumber {
    // ...

    /// @notice Set the even number stored on the contract. Requires a RISC Zero proof that the number is even.
    function set(uint256 x, bytes calldata seal) public {
        // Construct the expected journal data. Verify will fail if journal does not match.
        bytes memory journal = abi.encode(x);
        // The verify call will revert if the given seal is not a verifying zero-knowledge proof.
        verifier.verify(seal, IS_EVEN_ID, sha256(journal));
        number = x;
    }

    // ...
}
```

In this example, the `IS_EVEN` zkVM program verifies that the number, `x`, is even.
By verifying a receipt with the [image ID][term-image-id] of that program, it is guaranteed that the stored number will always be even.
RISC Zero's zkVM and the `IS_EVEN` program guarantee that it's computationally impossible to produce a verifying receipt for an odd number.

## Verifier Implementations

All of our deployed verifier contracts implement the [IRiscZeroVerifier][IRiscZeroVerifier] interface.

We deploy a base verifier implementation, the emergency stop wrapper, and the router as part of our [version management design][version-management].
It is recommended that most applications use [RiscZeroVerifierRouter](#verifier-router).
In some cases, your application may wish to make calls directly to either the emergency stop wrapper, or the base implementation.

:::tip
It is recommended that you use the [RiscZeroVerifierRouter](#verifier-router)
:::

## Verifier Router

Calls to `RiscZeroVerifierRouter.verify()` will be routed to the appropriate base verifier contract depending on which version of the zkVM was used to generate the receipt.
By using the `RiscZeroVerifierRouter`, your contract can accept multiple types of receipts, including batch-verified receipts and receipts generated with future improvements to the zkVM and proofs system.

RISC Zero deploys and manages the `RiscZeroVerifierRouter` contract listed below.
This contract will have verifiers added for each release of the zkVM, and will have verifiers removed in the case of security vulnerabilities.
You can find detailed information in the [version management design][version-management], including information about how to manage your own copy of the smart contracts, if your application requires it.

### Contract Addresses

> NOTE: The tables below are generated from the [`deployment.toml`][deployment.toml] file in the risc0-ethereum repository.

### Ethereum Mainnet (1)

| Contract                                   | Address                                                              |
| ------------------------------------------ | -------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319`][router-1-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-1-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805`][estop-1-etherscan]    |
| TimelockController                         | [`0x0b144E07A0826182B6b59788c34b32Bfa86Fb711`][timelock-1-etherscan] |

<br />

### Ethereum Sepolia (11155111)

| Contract                                   | Address                                                                     |
| ------------------------------------------ | --------------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x925d8331ddc0a1F0d96E68CF073DFE1d92b69187`][router-11155111-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-11155111-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-11155111-etherscan]    |
| TimelockController                         | [`0xB4E3306129208cC8e6E75157f75f62eAe0B920a0`][timelock-11155111-etherscan] |

<br />

### Ethereum Holesky (17000)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0xf70aBAb028Eb6F4100A24B203E113D94E87DE93C`][router-17000-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-17000-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-17000-etherscan]    |
| TimelockController                         | [`0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319`][timelock-17000-etherscan] |

<br />

### Arbitrum Mainnet (42161)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-42161-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-42161-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805`][estop-42161-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-42161-etherscan] |

<br />

### Arbitrum Sepolia (421614)

| Contract                                   | Address                                                                   |
| ------------------------------------------ | ------------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-421614-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-421614-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-421614-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-421614-etherscan] |

<br />

### Avalanche Mainnet (43114)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144E07A0826182B6b59788c34b32Bfa86Fb711`][router-43114-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0x8062Dc6C824F10e62E47FdC55A0ecD54C2641F2d`][verifier-43114-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x5b188d3d31f7bcfC2e3A22F85c3ca4dD23a77dD1`][estop-43114-etherscan]    |
| TimelockController                         | [`0xDC986a09728F76110FF666eE7b20d99086501d15`][timelock-43114-etherscan] |

<br />

### Avalanche Fuji (43113)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144E07A0826182B6b59788c34b32Bfa86Fb711`][router-43113-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-43113-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-43113-etherscan]    |
| TimelockController                         | [`0xDC986a09728F76110FF666eE7b20d99086501d15`][timelock-43113-etherscan] |

<br />

### Base Mainnet (8453)

| Contract                                   | Address                                                                 |
| ------------------------------------------ | ----------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-8453-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-8453-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805`][estop-8453-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-8453-etherscan] |

<br />

### Base Sepolia (84532)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-84532-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-84532-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-84532-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-84532-etherscan] |

<br />

### Optimism Mainnet (10)

| Contract                                   | Address                                                               |
| ------------------------------------------ | --------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-10-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-10-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805`][estop-10-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-10-etherscan] |

<br />

### Optimism Sepolia (11155420)

| Contract                                   | Address                                                                     |
| ------------------------------------------ | --------------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0xB369b4dd27FBfb59921d3A4a3D23AC2fc32FB908`][router-11155420-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0xAC292cF957Dd5BA174cdA13b05C16aFC71700327`][verifier-11155420-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x47d697328D6A80b00D796cEd9f54468931Aa1ECe`][estop-11155420-etherscan]    |
| TimelockController                         | [`0x2DEfEA335392bb62d01f74e338697C7B31De254C`][timelock-11155420-etherscan] |

<br />

### Linea Mainnet (59144)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-59144-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0x8C8b557C6EBDA8E6D62E7b54B7B5Ed8cFa8B48B4`][verifier-59144-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x6Fb722974D67A55091c70129Bd0Bb06ec025ce5D`][estop-59144-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-59144-etherscan] |

<br />

### Linea Sepolia (59141)

| Contract                                   | Address                                                                  |
| ------------------------------------------ | ------------------------------------------------------------------------ |
| [RiscZeroVerifierRouter][router-src]       | [`0x27983ee173aD10E171D17C9c5C14d5baFE997609`][router-59141-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0x8C8b557C6EBDA8E6D62E7b54B7B5Ed8cFa8B48B4`][verifier-59141-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x61b97ad01416183bd5A4F039baaAb6b75bdC99E4`][estop-59141-etherscan]    |
| TimelockController                         | [`0xBDaEd5bbf8016AfD05Fc4659572e5fEb5854aAD4`][timelock-59141-etherscan] |

<br />

### Polygon zkEVM Mainnet (1101)

| Contract                                   | Address                                                                 |
| ------------------------------------------ | ----------------------------------------------------------------------- |
| [RiscZeroVerifierRouter][router-src]       | [`0x0b144e07a0826182b6b59788c34b32bfa86fb711`][router-1101-etherscan]   |
| [RiscZeroGroth16Verifier][verifier-src]    | [`0x8062Dc6C824F10e62E47FdC55A0ecD54C2641F2d`][verifier-1101-etherscan] |
| [RiscZeroVerifierEmergencyStop][estop-src] | [`0x5b188d3d31f7bcfC2e3A22F85c3ca4dD23a77dD1`][estop-1101-etherscan]    |
| TimelockController                         | [`0xdc986a09728f76110ff666ee7b20d99086501d15`][timelock-1101-etherscan] |

[deployment.toml]: https://github.com/risc0/risc0-ethereum/tree/release-1.2/contracts/deployment.toml
[estop-1-etherscan]: https://etherscan.io/address/0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805#code
[estop-10-etherscan]: https://optimistic.etherscan.io/address/0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805#code
[estop-1101-etherscan]: https://zkevm.polygonscan.com/address/0x5b188d3d31f7bcfC2e3A22F85c3ca4dD23a77dD1#code
[estop-8453-etherscan]: https://basescan.org/address/0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805#code
[estop-17000-etherscan]: https://holesky.etherscan.io/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-42161-etherscan]: https://arbiscan.io/address/0x03B66cEDaB014Ca7E970Bfb83C1951d10DD2A805#code
[estop-43113-etherscan]: https://testnet.snowtrace.io/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-43114-etherscan]: https://snowtrace.io/address/0x5b188d3d31f7bcfC2e3A22F85c3ca4dD23a77dD1#code
[estop-59141-etherscan]: https://sepolia.lineascan.build/address/0x61b97ad01416183bd5A4F039baaAb6b75bdC99E4#code
[estop-59144-etherscan]: https://lineascan.build/address/0x6Fb722974D67A55091c70129Bd0Bb06ec025ce5D#code
[estop-84532-etherscan]: https://sepolia.basescan.org/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-421614-etherscan]: https://sepolia.arbiscan.io/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-11155111-etherscan]: https://sepolia.etherscan.io/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-11155420-etherscan]: https://sepolia-optimism.etherscan.io/address/0x47d697328D6A80b00D796cEd9f54468931Aa1ECe#code
[estop-src]: https://github.com/risc0/risc0-ethereum/tree/release-1.2/contracts/src/RiscZeroVerifierEmergencyStop.sol
[EvenNumber.sol]: https://github.com/risc0/risc0-foundry-template/blob/main/contracts/EvenNumber.sol#L46-L52
[foundry-template]: https://github.com/risc0/risc0-foundry-template
[Groth16Receipt]: https://docs.rs/risc0-zkvm/1.2/risc0_zkvm/struct.Groth16Receipt.html
[IRiscZeroVerifier]: https://github.com/risc0/risc0-ethereum/blob/release-1.2/contracts/src/IRiscZeroVerifier.sol
[router-1-etherscan]: https://etherscan.io/address/0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319#code
[router-10-etherscan]: https://optimistic.etherscan.io/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-1101-etherscan]: https://zkevm.polygonscan.com/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-8453-etherscan]: https://basescan.org/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-17000-etherscan]: https://holesky.etherscan.io/address/0xf70aBAb028Eb6F4100A24B203E113D94E87DE93C#code
[router-42161-etherscan]: https://arbiscan.io/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-43113-etherscan]: https://testnet.snowtrace.io/address/0x0b144E07A0826182B6b59788c34b32Bfa86Fb711#code
[router-43114-etherscan]: https://snowtrace.io/address/0x0b144E07A0826182B6b59788c34b32Bfa86Fb711#code
[router-59141-etherscan]: https://sepolia.lineascan.build/address/0x27983ee173aD10E171D17C9c5C14d5baFE997609#code
[router-59144-etherscan]: https://lineascan.build/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-84532-etherscan]: https://sepolia.basescan.org/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-421614-etherscan]: https://sepolia.arbiscan.io/address/0x0b144e07a0826182b6b59788c34b32bfa86fb711#code
[router-11155111-etherscan]: https://sepolia.etherscan.io/address/0x925d8331ddc0a1F0d96E68CF073DFE1d92b69187#code
[router-11155420-etherscan]: https://sepolia-optimism.etherscan.io/address/0xB369b4dd27FBfb59921d3A4a3D23AC2fc32FB908#code
[router-src]: https://github.com/risc0/risc0-ethereum/tree/release-1.2/contracts/src/RiscZeroVerifierRouter.sol
[term-image-id]: /terminology#image-id
[term-journal]: /terminology#journal
[term-receipt]: /terminology#receipt
[term-verify]: /terminology#verify
[term-zkvm]: /terminology#zero-knowledge-virtual-machine-zkvm
[timelock-1-etherscan]: https://etherscan.io/address/0x0b144E07A0826182B6b59788c34b32Bfa86Fb711#code
[timelock-10-etherscan]: https://optimistic.etherscan.io/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-1101-etherscan]: https://zkevm.polygonscan.com/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-8453-etherscan]: https://basescan.org/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-17000-etherscan]: https://holesky.etherscan.io/address/0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319#code
[timelock-42161-etherscan]: https://arbiscan.io/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-43113-etherscan]: https://testnet.snowtrace.io/address/0xDC986a09728F76110FF666eE7b20d99086501d15#code
[timelock-43114-etherscan]: https://snowtrace.io/address/0xDC986a09728F76110FF666eE7b20d99086501d15#code
[timelock-59141-etherscan]: https://sepolia.lineascan.build/address/0xBDaEd5bbf8016AfD05Fc4659572e5fEb5854aAD4#code
[timelock-59144-etherscan]: https://lineascan.build/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-84532-etherscan]: https://sepolia.basescan.org/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-421614-etherscan]: https://sepolia.arbiscan.io/address/0xdc986a09728f76110ff666ee7b20d99086501d15#code
[timelock-11155111-etherscan]: https://sepolia.etherscan.io/address/0xB4E3306129208cC8e6E75157f75f62eAe0B920a0#code
[timelock-11155420-etherscan]: https://sepolia-optimism.etherscan.io/address/0x2DEfEA335392bb62d01f74e338697C7B31De254C#code
[verifier-1-etherscan]: https://etherscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-10-etherscan]: https://optimistic.etherscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-1101-etherscan]: https://zkevm.polygonscan.com/address/0x8062Dc6C824F10e62E47FdC55A0ecD54C2641F2d#code
[verifier-8453-etherscan]: https://basescan.org/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-17000-etherscan]: https://holesky.etherscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-42161-etherscan]: https://arbiscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-43113-etherscan]: https://testnet.snowtrace.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-43114-etherscan]: https://snowtrace.io/address/0x8062Dc6C824F10e62E47FdC55A0ecD54C2641F2d#code
[verifier-59141-etherscan]: https://sepolia.lineascan.build/address/0x8C8b557C6EBDA8E6D62E7b54B7B5Ed8cFa8B48B4#code
[verifier-59144-etherscan]: https://lineascan.build/address/0x8C8b557C6EBDA8E6D62E7b54B7B5Ed8cFa8B48B4#code
[verifier-84532-etherscan]: https://sepolia.basescan.org/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-421614-etherscan]: https://sepolia.arbiscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-11155111-etherscan]: https://sepolia.etherscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-11155420-etherscan]: https://sepolia-optimism.etherscan.io/address/0xAC292cF957Dd5BA174cdA13b05C16aFC71700327#code
[verifier-src]: https://github.com/risc0/risc0-ethereum/tree/release-1.2/contracts/src/groth16/RiscZeroGroth16Verifier.sol
[version-management]: https://github.com/risc0/risc0-ethereum/blob/release-1.2/contracts/version-management-design.md
